# windy

./: .gitignore  Cargo.toml  README.md  build.gradle  go.mod  settings.gradle  windy.html
.github/workflows/: ci.yml  publish.yml  release.yml
api/: Cargo.toml  main.go  main.rs  windy.go
api/src/: config.rs  decode.rs  gfs.rs  main.rs  server.rs  windy.rs
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/windy/: background.frag  background.vert  particle.frag  particle.vert  particle_system.frag  particle_system.vert  trail.frag  trail.vert
app/src/main/java/net/pgaskin/windy/: BlurUtils.java  FPSThrottler.java  LocationActivity.java  LocationPermissionActivity.java  NativeRenderer.java  PowerSaveController.java  UserLocationController.java  WindField.java  WindFieldProvider.java  WindFieldUpdateService.java  Windy.java  WindyWallpaper.java  WindyWallpaperService.java  WindyWallpaperService1.java  WindyWallpaperService2.java  WindyWallpaperService3.java  WindyWallpaperService4.java  WindyWallpaperService5.java  WindyWallpaperService6.java  WindyWallpaperServiceBase.java
app/src/main/res/drawable/: ic_launcher.xml  ic_launcher_background.xml
app/src/main/res/mipmap/: ic_launcher.xml
app/src/main/res/values/: styles.xml
app/src/main/res/xml/: windy_blue.xml  windy_blush.xml  windy_green.xml  windy_maroon.xml  windy_midnight.xml  windy_sepia.xml  windy_skybluewhirled.xml  windy_sparkwhirled.xml  windy_sunsetwhirled.xml  windy_turqoisewhirled.xml  windy_wallpaper.xml
app/src/main/rust/: Cargo.toml
app/src/main/rust/src/: lib.rs
buildSrc/: build.gradle
buildSrc/src/main/groovy/net/pgaskin/windy/gradle/: CargoBuildTask.groovy  GenerateThemesTask.groovy
cmd/windgen/: main.go
core/: Cargo.toml  build.rs
core/src/: config.rs  lib.rs  render.rs
core/src/shaders/: common.wgsl  composite.wgsl  fade.wgsl  simulate.wgsl  trail.wgsl
jni/: Cargo.toml
jni/src/: lib.rs
preview/: Cargo.toml
preview/src/: color_picker.rs  main.rs  theme_editor.rs
