[workspace]
resolver = "2"
members = [
    "api",
    "app/src/main/rust",
    "core",
    "preview",
]

[workspace.package]
version = "0.0.8"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/pgaskin/windy"

[workspace.dependencies]
windy-wallpaper-core = { path = "core", version = "0.0.8" }
wgpu = { version = "29", default-features = false, features = ["vulkan", "wgsl", "std"] }
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
clap = { version = "4", features = ["derive", "env"] }

[profile.release]
panic = "abort" # cannot unwind across jni
